feat: add PATs to the me API enpoint